--- a/base.css
+++ b/base.css
@@ -2,10 +2,10 @@ body, html {
     height: 100%;
     width: 100%;
     margin: 0px;
-    background-image: url(img/industry-pipe-white-2455.jpg);
+    background-image: url(img/analog-apple-audio-1784.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: left center;
+    background-position: center center;
     background-attachment: fixed;
     font-family: 'Open Sans', sans-serif;
 }
@@ -14,7 +14,6 @@ h1 {
     font-size: 50px;
     margin: 0px;
     padding-top: 20px;
-    transform: fade(1, 100);
 }
 
 h2 {
@@ -48,27 +47,21 @@ img {
 }
 
 nav {
+    z-index: 999999999999;
+    color: #fff;
+    font-weight: bold;
     display: block;
-    height: 50px;
-    background-color: silver;
+    background-color:#cfcfcf;
     position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
     text-align: center;
 }
-
-nav > ul > li {
-    display: inline-block;
-    text-decoration: none;
-    list-style-type: none;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-
 nav > ul > li > a {
     text-decoration: none;
     color: inherit;
+    text-align: center;
 }
 
 nav > ul > li > a:active {
@@ -77,8 +70,10 @@ nav > ul > li > a:active {
 
 .header {
     display: table;
+    color: #fff;
     width: 100%;
     height: 100%;
+    min-height: 100%;
 }
 
 .header-inside {
@@ -90,6 +85,7 @@ nav > ul > li > a:active {
     margin-bottom: 100px;
 }
 
+/* Grid Stuff */
 .container {
     padding: 0px;
     margin: 0px;
@@ -97,22 +93,184 @@ nav > ul > li > a:active {
     background-color: #fff;
 }
 
-@media all and (min-width: 960px) {
+@media all and (min-width: 1170px) {
+    nav {
+        height: 60px;
+    }
     .row {
         display: table;
-        padding-top: 20px;
-        padding-bottom: 20px;
+        padding-top: 50px;
+        padding-bottom: 50px;
         width: 1170px;
         margin-left: auto;
         margin-right: auto;
     }
+
+    .col-1 {
+        width: 8.33333%;
+    }
+
+    .col-2 {
+        width: 16.66666%;
+    }
+
+    .col-3 {
+        width: 24.9999%;
+    }
+
+    .col-4 {
+        width: 33.3333%;
+    }
+
+    .col-5 {
+        width: 42.3333%;
+    }
+
+    .col-6 {
+        width: 50%;
+    }
+
+    .col-7 {
+        width: 58.333%;
+    }
+
+    .col-8 {
+        width: 66.6666%;
+    }
+
+    .col-9 {
+        width: 74.99999%;
+    }
+
+    .col-10 {
+        width: 83.3333%;
+    }
+
+    .col-11 {
+        width: 92.3333%;
+    }
+
+    .col-12 {
+        width: 100%;
+    }
+
+    .offset-1 {
+        margin-left: 8.33333%;
+    }
+
+    .offset-2 {
+        margin-left: 16.66666%;
+    }
+
+    .offset-3 {
+        margin-left: 24.9999%;
+    }
+
+    .offset-4 {
+        margin-left: 33.3333%;
+    }
+
+    .offset-5 {
+        margin-left: 42.3333%;
+    }
+
+    .offset-6 {
+        margin-left: 50%;
+    }
+
+    .offset-7 {
+        margin-left: 58.333%;
+    }
+
+    .offset-8 {
+        margin-left: 66.6666%;
+    }
+
+    .offset-9 {
+        margin-left: 74.99999%;
+    }
+
+    .offset-10 {
+        margin-left: 83.3333%;
+    }
+
+    .offset-11 {
+        margin-left: 92.3333%;
+    }
+
+    .offset-12 {
+        margin-left: 100%;
+    }
+
+    nav > ul > li {
+        display: inline-block;
+        text-decoration: none;
+        list-style-type: none;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
 }
 
-@media all and (max-width: 959px) {
+@media all and (max-width: 1169px) {
+    nav {
+        display: none;
+    }
     .row {
+        display: table;
         width: 100%;
+        padding-top: 50px;
+        padding-bottom: 50px;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .col-1 {
+        width: 100%;
+    }
+
+    .col-2 {
+        width: 100%;
+    }
+
+    .col-3 {
+        width: 100%;
+    }
+
+    .col-4 {
+        width: 100%;
+    }
+
+    .col-5 {
+        width: 100%;
+    }
+
+    .col-6 {
+        width: 100%;
+    }
+
+    .col-7 {
+        width: 100%;
+    }
+
+    .col-8 {
+        width: 100%;
+    }
+
+    .col-9 {
+        width: 100%;
+    }
+
+    .col-10 {
+        width: 100%;
+    }
+
+    .col-11 {
+        width: 100%;
+    }
+
+    .col-12 {
+        width: 100%;
     }
 }
 
@@ -126,6 +284,9 @@ nav > ul > li > a:active {
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12
 {
+    padding-left: 5px;
+    padding-right: 5px;
+    background-color: #fff;
     word-wrap: break-word;
     white-space: pre-wrap;
     white-space: pre-line;
@@ -135,98 +296,43 @@ nav > ul > li > a:active {
     min-height: 1px;
 }
 
-.col-1 {
-    width: 8.33333%;
-}
 
-.col-2 {
-    width: 16.66666%;
-}
 
-.col-3 {
-    width: 24.9999%;
-}
+/* End grid stuff */
 
-.col-4 {
-    width: 33.3333%;
-}
-
-.col-5 {
-    width: 42.3333%;
-}
-
-.col-6 {
-    width: 50%;
-}
-
-.col-7 {
-    width: 58.333%;
-}
-
-.col-8 {
-    width: 66.6666%;
-}
-
-.col-9 {
-    width: 74.99999%;
-}
-
-.col-10 {
-    width: 83.3333%;
-}
-
-.col-11 {
-    width: 92.3333%;
-}
-
-.col-12 {
+.thumb-container {
     width: 100%;
 }
 
-.offset-1 {
-    margin-left: 8.33333%;
+.img-responsive {
+    width: 100%;
+    height: auto;
 }
 
-.offset-2 {
-    margin-left: 16.66666%;
+.img-rounded {
+    border-radius: 50%;
 }
 
-.offset-3 {
-    margin-left: 24.9999%;
+.text-center {
+    text-align: center;
 }
 
-.offset-4 {
-    margin-left: 33.3333%;
+.interlude {
+    height: 300px;
+    width: 100%;
+    background-color: rgba(50,50,50, 0.9);
 }
 
-.offset-5 {
-    margin-left: 42.3333%;
+.footer {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    text-align: center;
+    color: #fff;
+    background-color: #1E72BE;
+    width: 100%;
 }
 
-.offset-6 {
-    margin-left: 50%;
-}
-
-.offset-7 {
-    margin-left: 58.333%;
-}
-
-.offset-8 {
-    margin-left: 66.6666%;
-}
-
-.offset-9 {
-    margin-left: 74.99999%;
-}
-
-.offset-10 {
-    margin-left: 83.3333%;
-}
-
-.offset-11 {
-    margin-left: 92.3333%;
-}
-
-.offset-12 {
-    margin-left: 100%;
+.footer > p:nth-child(1) > a:nth-child(1){
+    color: #fff;
+    text-decoration: underline;
 }
