--- a/css/base.css
+++ b/css/base.css
@@ -3,12 +3,19 @@ html {
   height: 100%;
   width: 100%;
   margin: 0px;
-  background-image: url('../img/analog-apple-audio-1784.jpg');
+  font-family: 'Open Sans', sans-serif;
+}
+#background {
+  z-index: -10000;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-image: url('../img/pics/analog-apple-audio-1784.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  background-attachment: fixed;
-  font-family: 'Open Sans', sans-serif;
 }
 h1 {
   font-size: 50px;
