--- a/css/base.less
+++ b/css/base.less
@@ -4,12 +4,20 @@ body, html {
   height: 100%;
   width: 100%;
   margin: 0px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+#background {
+  z-index: -10000;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
   background-image: @body-background-image;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  background-attachment: fixed;
-  font-family: 'Open Sans', sans-serif;
 }
 
 h1 {
