--- a/css/navbar.less
+++ b/css/navbar.less
@@ -1,23 +1,36 @@
+@import 'variables';
+
 nav {
   z-index: 999999999999;
   color: #fff;
   font-weight: bold;
   display: block;
-  background-color:#cfcfcf;
+  background-color:@navbar-background;
   position: fixed;
   top: 0px;
   left: 0px;
   width: 100%;
   text-align: center;
-}
-nav > ul > li > a {
-  text-decoration: none;
-  color: inherit;
-  text-align: center;
-}
+  padding-top: 0px;
+  padding-bottom: 0px;
 
-nav > ul > li > a:active {
-  background-color: rgba(192, 192, 192, 0.7);
+  ul > li {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    a {
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-top: 16px;
+      padding-bottom: 16px;
+      text-decoration: none;
+      color: inherit;
+      text-align: center;
+    }
+
+    a:hover {
+      background-color: darken(@navbar-background, 10%);
+    }
+  }
 }
 
 @media all and (max-width: 1169px)
