--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,19 @@ html {
   height: 100%;
   width: 100%;
   margin: 0px;
-  background-image: url('../img/analog-apple-audio-1784.jpg');
+  font-family: 'Open Sans', sans-serif;
+}
+#background {
+  z-index: -10000;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-image: url('../img/pics/analog-apple-audio-1784.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  background-attachment: fixed;
-  font-family: 'Open Sans', sans-serif;
 }
 h1 {
   font-size: 50px;
@@ -59,9 +66,6 @@ h6 {
   background-color: #fff;
 }
 @media all and (min-width: 1170px) {
-  nav {
-    height: 60px;
-  }
   .row {
     display: table;
     padding-top: 50px;
@@ -236,14 +240,24 @@ nav {
   left: 0px;
   width: 100%;
   text-align: center;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
-nav > ul > li > a {
+nav ul > li {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+nav ul > li a {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   text-decoration: none;
   color: inherit;
   text-align: center;
 }
-nav > ul > li > a:active {
-  background-color: rgba(192, 192, 192, 0.7);
+nav ul > li a:hover {
+  background-color: #b6b6b6;
 }
 @media all and (max-width: 1169px) {
   nav {
