--- a/css/navbar.css
+++ b/css/navbar.css
@@ -26,7 +26,7 @@ nav ul > li a {
   text-align: center;
 }
 nav ul > li a:hover {
-  background-color: #b6b6b6;
+  background-color: #000000;
 }
 @media all and (max-width: 1169px) {
   nav {
