--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ nav ul > li a {
   text-align: center;
 }
 nav ul > li a:hover {
-  background-color: #000000;
+  background-color: #afafaf;
 }
 @media all and (max-width: 1169px) {
   nav {
