--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,7 +3,7 @@ nav {
   color: #fff;
   font-weight: bold;
   display: block;
-  background-color: #cfcfcf;
+  background-color: #3dc230;
   position: fixed;
   top: 0px;
   left: 0px;
@@ -26,7 +26,7 @@ nav ul > li a {
   text-align: center;
 }
 nav ul > li a:hover {
-  background-color: #afafaf;
+  background-color: #4acf3d;
 }
 @media all and (max-width: 1169px) {
   nav {
