--- a/css/navbar.less
+++ b/css/navbar.less
@@ -27,7 +27,7 @@ nav {
       text-align: center;
     }
 
-    a:hover {
+    a:hover, a:active {
       background-color: lighten(@navbar-background, 5%);
     }
   }
