--- a/css/variables.less
+++ b/css/variables.less
@@ -2,3 +2,7 @@
 @body-background-image: url('../img/pics/compressed/analog-apple-audio-1784-1080.jpg');
 
 @navbar-background: #3DC230;
+
+@logo-background: #FF0000;
+@logo-border: #fff;
+@logo-font-color: #fff;
