changed logo colour

--- a/css/style.css
+++ b/css/style.css
@@ -814,7 +814,7 @@ nav ul > li a:active {
 }
 #logo-css .logo-box {
   width: 600px;
-  background-color: #ff0000;
+  background-color: #dc0000;
 }
 #logo-css .logo-box .logo-line {
   margin-top: 10px;
