--- a/css/variables.less
+++ b/css/variables.less
@@ -3,6 +3,6 @@
 
 @navbar-background: #3DC230;
 
-@logo-background: #FF0000;
+@logo-background: #DC0000;
 @logo-border: #fff;
 @logo-font-color: #fff;
