Added amp to logo

--- a/css/logo.less
+++ b/css/logo.less
@@ -3,21 +3,18 @@
 #logo-css {
   display: inline-block;
 
-  @media all and (min-width: 600px){
+  @media all and (min-width: 600px) {
     width: 600px;
-    transform:rotate(21deg);
+    transform: rotate(21deg);
   }
 
-  @media all and (max-width: 599px){
+  @media all and (max-width: 599px) {
     width: 100%;
   }
 
   text-align: center;
 
   .logo-box {
-
-
-
     background-color: @logo-background;
     .logo-line {
 
@@ -30,7 +27,12 @@
     }
   }
 }
+
+#rotate-1 {
+  margin-bottom: 30px;
+}
+
 #rotate-2 {
   margin-top: 50px;
-  transform:rotate(180deg);
+  transform: rotate(180deg);
 }
