--- a/css/style.css
+++ b/css/style.css
@@ -822,7 +822,7 @@ nav ul > li a:active {
   }
 }
 #logo-css .logo-box {
-  background-color: #dc0000;
+  background-color: #cf0000;
 }
 #logo-css .logo-box .logo-line {
   margin-top: 10px;
@@ -830,6 +830,9 @@ nav ul > li a:active {
   padding-bottom: 20px;
   border-top: 5px white solid;
   border-bottom: 5px white solid;
+}
+#rotate-1 {
+  margin-bottom: 30px;
 }
 #rotate-2 {
   margin-top: 50px;
