Width is now adjustable from variables.css

--- a/css/grid.css
+++ b/css/grid.css
@@ -1,23 +1,18 @@
-.row {
+.container {
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  background-color: #fff;
+}
+@media all and (min-width: 960px) {
+  .row {
     display: table;
     padding-top: 50px;
     padding-bottom: 50px;
-    width: 100%;
+    width: 960px;
     margin-left: auto;
     margin-right: auto;
-}
-.container {
-    padding: 0px;
-    margin: 0px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #fff;
-}
-
-@media all and (min-width: 1170px) {
-    .container {
-        width: 1170px;
-    }
+  }
   .col-1 {
     width: 8.33333%;
   }
@@ -98,10 +93,15 @@
     padding-right: 5px;
   }
 }
-@media all and (max-width: 1169px) {
-    .container {
-        width: 100%;
-    }
+@media all and (max-width: 960px - 1px) {
+  .row {
+    display: table;
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .col-1 {
     width: 100%;
   }
