--- a/css/logo.less
+++ b/css/logo.less
@@ -13,10 +13,14 @@
   }
 
   text-align: center;
+  box-sizing: content-box;
 
   .logo-box {
     background-color: @logo-background;
+    box-sizing: content-box;
     .logo-line {
+
+      box-sizing: content-box;
 
       margin-top: 10px;
       margin-bottom: 10px;
