--- a/css/variables.less
+++ b/css/variables.less
@@ -1,8 +1,10 @@
 @body-background: #fff;
 @body-background-image: url('../img/pics/compressed/analog-apple-audio-1784-1080.jpg');
 
-@navbar-background: #3DC230;
+@navbar-background: #cfcfcf;
 
 @logo-background: #CF0000;
 @logo-border: #fff;
 @logo-font-color: #fff;
+
+@container-width: 960px;
