--- a/css/grid.less
+++ b/css/grid.less
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .container {
   padding: 0px;
   margin: 0px;
@@ -5,12 +7,12 @@
   background-color: #fff;
 }
 
-@media all and (min-width: 1170px) {
+@media all and (min-width: @container-width) {
   .row {
     display: table;
     padding-top: 50px;
     padding-bottom: 50px;
-    width: 1170px;
+    width: @container-width;
     margin-left: auto;
     margin-right: auto;
   }
@@ -121,7 +123,7 @@
 
 }
 
-@media all and (max-width: 1169px) {
+@media all and (max-width: @container-width - 1px) {
   .row {
     display: table;
     width: 100%;
