--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,7 +3,7 @@ nav {
   color: #fff;
   font-weight: bold;
   display: block;
-  background-color: #3dc230;
+  background-color: #cfcfcf;
   position: fixed;
   top: 0px;
   left: 0px;
@@ -27,9 +27,9 @@ nav ul > li a {
 }
 nav ul > li a:hover,
 nav ul > li a:active {
-  background-color: #4acf3d;
+  background-color: #dcdcdc;
 }
-@media all and (max-width: 1169px) {
+@media all and (max-width: 959px) {
   nav {
     display: none;
   }
