--- a/css/base.less
+++ b/css/base.less
@@ -52,9 +52,19 @@ h6 {
 }
 
 .interlude {
-  height: 300px;
+  color: darken(#fff, 2.5%);
   width: 100%;
   background-color: rgba(50,50,50, 0.9);
+
+  text-align: center;
+
+  padding: 100px 0px 110px 0px;
+
+  blockquote {
+    width: auto;
+    border-left: 1px solid gray;
+  }
+
 }
 
 .footer {
