--- a/css/grid.css
+++ b/css/grid.css
@@ -1,14 +1,12 @@
 .container {
-  padding: 0px;
   margin: 0px;
+  padding: 100px 0px;
   width: 100%;
   background-color: #fff;
 }
 @media all and (min-width: 1200px) {
   .row {
     display: table;
-    padding-top: 50px;
-    padding-bottom: 50px;
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
@@ -97,8 +95,6 @@
   .row {
     display: table;
     width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -158,12 +154,9 @@
 .col-10,
 .col-11,
 .col-12 {
-  padding-left: 5px;
-  padding-right: 5px;
+  display: table-row;
+  padding: 10px;
   background-color: #fff;
-  word-wrap: break-word;
-  white-space: pre-wrap;
-  white-space: pre-line;
   float: left;
   position: relative;
   min-height: 1px;
