--- a/css/grid.less
+++ b/css/grid.less
@@ -1,8 +1,8 @@
 @import 'variables';
 
 .container {
-  padding: 0px;
   margin: 0px;
+  padding: 100px 0px;
   width: 100%;
   background-color: #fff;
 }
@@ -10,8 +10,6 @@
 @media all and (min-width: @container-width) {
   .row {
     display: table;
-    padding-top: 50px;
-    padding-bottom: 50px;
     width: @container-width;
     margin-left: auto;
     margin-right: auto;
@@ -127,8 +125,6 @@
   .row {
     display: table;
     width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -191,13 +187,9 @@
 }
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
-  padding-left: 5px;
-  padding-right: 5px;
+  display: table-row;
+  padding: 10px;
   background-color: #fff;
-  word-wrap: break-word;
-  white-space: pre-wrap;
-  white-space: pre-line;
-
   float: left;
   position: relative;
   min-height: 1px;
