--- a/css/header.less
+++ b/css/header.less
@@ -14,3 +14,10 @@
   margin-top: 100px;
   margin-bottom: 100px;
 }
+
+.header-bottom{
+  display: table-cell;
+  vertical-align: bottom;
+  text-align: center;
+  background-color: transparent;
+}
