--- a/css/grid.less
+++ b/css/grid.less
@@ -13,6 +13,7 @@
     width: @container-width;
     margin-left: auto;
     margin-right: auto;
+    clear: both;
   }
 
   .col-1 {
@@ -121,12 +122,13 @@
 
 }
 
-@media all and (max-width: @container-width - 1px) {
+@media all and (max-width: @container-width) {
   .row {
     display: table;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    clear: both;
   }
 
   .col-1 {
@@ -192,5 +194,5 @@
   background-color: #fff;
   float: left;
   position: relative;
-  min-height: 1px;
+  min-width: 1px;
 }
