--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ h6 {
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    clear: both;
   }
   .col-1 {
     width: 8.33333%;
@@ -158,12 +159,13 @@ h6 {
     padding-right: 5px;
   }
 }
-@media all and (max-width: 1200px - 1px) {
+@media all and (max-width: 1200px) {
   .row {
     display: table;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    clear: both;
   }
   .col-1 {
     width: 100%;
@@ -226,7 +228,7 @@ h6 {
   background-color: #fff;
   float: left;
   position: relative;
-  min-height: 1px;
+  min-width: 1px;
 }
 nav {
   z-index: 999999999999;
