--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ html {
   width: 100%;
   margin: 0px;
   font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
 }
 #background {
   z-index: -10000;
